# VoiceCommander

./: .env.example  .gitignore  README.md  pyproject.toml
core/: ai.py  config.py  runner.py  utils.py  voice.py  whisper_backends.py
data/: wakeword_model.pkl
scripts/: setup_termux.sh
tello/: __main__.py  commands.py  config.py  interpreter.py
tello/wakeword/: detector.py  features.py  record.py  train.py
tests/: test_ai.py  test_configs.py  test_runner.py  test_tello_commands.py  test_tello_interpreter.py  test_utils.py  test_windows_commands.py
windows/: __main__.py  commands.py  config.py
